<resources>
    <string name="app_name">City Guide</string>
    <string name="founded">Founded:</string>
    <string name="foundation_year">4500 BCE</string>
    <string name="population">Population:</string>
    <string name="population_amount">1.124 million</string>
    <string name="details">Details:</string>
    <string name="description">Jerusalem is a city in the Middle East, located on a plateau in the Judaean Mountains between the Mediterranean and the Dead Sea.</string>
    <string name="learn_more">learn more</string>
    <string name="image_title">Welcome to Jerusalem</string>
    <string name="jerusalem_image">Jerusalem image</string>
</resources>
