<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="juda.cityguide.MainActivity">


            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/jrs"
                android:contentDescription="@string/jerusalem_image"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/photo"
                android:layout_marginLeft="16dp"
                android:text="@string/image_title"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                tools:textColorHighlight="@android:color/holo_blue_bright" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/photo"
            android:layout_above="@id/learn_more"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/foundation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/founded"
                android:textColor="@color/colorBlack"
                android:layout_marginRight="@dimen/margin_between_text"/>

            <TextView
                android:id="@+id/foundation_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/population"
                android:text="@string/foundation_year" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_between_text"
                android:text="@string/population"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/population_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/population_amount" />

            </LinearLayout>

            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/details"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/further_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/details"
                android:textSize="12sp"
                android:text="@string/description" />

        </LinearLayout>

            <Button
                android:id="@+id/learn_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/learn_more"
                android:onClick="btnLearn"
                android:textAllCaps="true"
                android:background="@color/colorCeleste"
                android:textColor="@color/colorWhite"/>


    </RelativeLayout>
